<resources>
    <string name="app_name">MtbAssistant</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="exit">Exit balanceAssistantMtb</string>
    <string name="exit_message">Are you sure to close balanceAssistantMtb?</string>
    <string name="yes">Yes</string>
    <string name="no">Abort</string>
    <string name="AppLogo">AppLogo</string>
    <string name="start">Start</string>
    <string name="start_tracking">Aufnahme starten</string>
    <string name="end_tracking">Aufnahme beenden</string>
    <string name="no_data_available">Es sind noch keine Aufnahmen vorhanden. Starte eine um Daten anschauen zu können.</string>

    <string name="hint_turn_on_bluetooth">Please turn on the Bluetooth adapter.</string>
    <string name="hint_allow_location">Please allow location permission to use sensor(s).</string>
    <string name="hint_connecting">Please wait for the connection result…</string>
    <string name="hint_syncing_failed">Put sensors as close as possible and try again.</string>
    <string name="hint_check_connection">Some sensors are disconnected. Please check the connection.</string>

    <string name="menu_start_scan">Scan</string>
    <string name="menu_stop_scan">Stop Scanning</string>
    <string name="menu_start_streaming">Start</string>
    <string name="menu_stop_streaming">Stop</string>
    <string name="menu_measure">Measure</string>

    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="batt_state_charging">Charging</string>
    <string name="syncing">Syncing</string>
    <string name="mode">Mode:</string>
    <string name="sync_status">Sync status:</string>
    <string name="sync_result_success">Success</string>
    <string name="sync_result_fail">Fail</string>
    <string name="mode_complete_euler">Complete (Euler)</string>
    <string name="name">Name:</string>
    <string name="orientation">Orientation (deg):</string>
    <string name="free_acc">Free Acceleration (m/s2):</string>
    <string name="wake_lock_acquired">WakeLock acquired</string>
    <string name="wake_lock_already_acquired">WakeLock was already active!</string>

    <string name="empty_file_name">You must provide a file name in order to start recording.</string>
    <string name="file_already_exists">This file already exists. Please choose another name.</string>

    <string name="feel_space_connection">Belt Connection</string>
    <string name="feel_space_connection_state">Belt Connection state:</string>
    <string name="toast_bt_activation_rejected_text">BT activation has been rejected.</string>
    <string name="toast_bt_activation_failed_text">BT activation failed.</string>
    <string name="feel_space_battery_section_heading_text">Belt battery</string>
    <string name="feel_space_power_status_heading_text">Power status:</string>
    <string name="feel_space_battery_level_heading_text">Battery level:</string>
    <string name="toast_connection_lost">Connection lost.</string>
    <string name="toast_connection_failed">Connection failed.</string>
    <string name="toast_scan_failed">Scan failed.</string>
    <string name="toast_no_belt_found">No belt found.</string>
    <string name="feel_space_default_intensity_section_heading_text">Default vibration intensity</string>
    <string name="feel_space_default_intensity_heading_text">Default intensity:</string>
    <string name="feel_space_set_intensity_heading_text">Change intensity:</string>
    <string name="feel_space_set_intensity_default_button_text">\u2192 \u0020\u002050%</string>
    <string name="feel_space_set_intensity_formatted_button_text">\u2192 %d%%</string>
    <string name="feel_space_search_and_connect_button_text">Search for Belt</string>
    <string name="please_enter_a_file_name">Please enter a file name</string>

    <string name="dash">-</string>
    <string name="go_back">Go back</string>
    <string name="stats">Balance Statistic</string>
    <string name="save">Save Statistic</string>

</resources>