<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sensor_box"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toTopOf="@id/change_csv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/mode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/mode_complete_euler"
            app:layout_constraintBottom_toBottomOf="@+id/mode_label"
            app:layout_constraintStart_toEndOf="@+id/mode_label" />

        <TextView
            android:id="@+id/sync_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sync_status"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mode_label"
            app:layout_constraintTop_toBottomOf="@+id/mode_label" />

        <TextView
            android:id="@+id/sync_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="-"
            app:layout_constraintBottom_toBottomOf="@+id/sync_label"
            app:layout_constraintStart_toEndOf="@+id/sync_label"
            tools:ignore="HardcodedText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/data_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sync_result" />


    </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_csv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/connection_header"
            android:layout_marginTop="@dimen/margin_small"
            style="@style/Widget.App.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/edit_csv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/please_enter_a_file_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Section: connection -->
        <TextView
            android:id="@+id/connection_header"
            android:text="@string/feel_space_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/connection_state_box" />

        <!-- Connection state label -->
        <LinearLayout
            android:id="@+id/connection_state_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/intensity_header" >
            <TextView
                android:text="@string/feel_space_connection_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small" />
            <TextView
                android:id="@+id/feel_space_connection_status_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small"/>
        </LinearLayout>

        <!-- Section: Default vibration intensity -->
        <TextView
            android:id="@+id/intensity_header"
            android:text="@string/feel_space_default_intensity_section_heading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/default_intensity_box" />

        <!-- Default intensity -->
        <LinearLayout
            android:id="@+id/default_intensity_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/slider_header">
            <TextView
                android:text="@string/feel_space_default_intensity_heading_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small"/>
            <TextView
                android:id="@+id/feel_space_default_intensity_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

        <!-- Default intensity slider -->
        <TextView
            android:id="@+id/slider_header"
            android:text="@string/feel_space_default_intensity_heading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:textAppearance="@android:style/TextAppearance.Small"
            app:layout_constraintBottom_toTopOf="@id/slider_box"/>

        <LinearLayout
            android:id="@+id/slider_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/battery_header">
            <SeekBar
                android:id="@+id/feel_space_set_intensity_slider"
                android:max="95"
                android:progress="45"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/feel_space_set_intensity_button"
                android:text="@string/feel_space_set_intensity_default_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Section: Battery -->
        <TextView
            android:id="@+id/battery_header"
            android:text="@string/feel_space_battery_section_heading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/power_status"/>

        <!-- Power status -->
        <LinearLayout
            android:id="@+id/power_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/battery_level">
            <TextView
                android:text="@string/feel_space_battery_level_heading_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small" />
            <TextView
                android:id="@+id/feel_space_power_status_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

        <!-- Battery level -->
        <LinearLayout
            android:id="@+id/battery_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/change_csv_title">
            <TextView
                android:text="@string/feel_space_battery_level_heading_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small" />
            <TextView
                android:id="@+id/feel_space_battery_level_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>